# patholog

./: .codacy.yml  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  SECURITY.md  SPEC.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  crates.js  help.html  index.html  install.sh  settings.html  src-files.js
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot-third-party-licenses.yml  docs.yml  pr_title.yml  release-crates-io.yml  release-dry-run.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml  test.yml
docs/: patholog-demo.tape
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/cli_read_only/: apply_append.json  apply_malformed.json  apply_replace.json  clean_export_fish.json  clean_windows.json  completions_pwsh.json  doctor_json.json  drop_clean.json  manpath_clean.json  preset_fink.json  print_all.json
fuzz/corpus/path_clean/: empty.json  repeated_separators.json  windows_case_duplicates.json
fuzz/corpus/path_parse_doctor/: homebrew_order.json  mixed_separators.json  windows_pathext.json
fuzz/fuzz_targets/: cli_read_only.rs  path_clean.rs  path_parse_doctor.rs
fuzz/src/: lib.rs
patholog/: all.html  index.html  sidebar-items.js
patholog/cli/: fn.run.html  index.html  sidebar-items.js  struct.CliResult.html  struct.CommandContext.html
patholog/cli/types/: struct.CliResult.html  struct.CommandContext.html
patholog/model/: enum.ApplyAction.html  enum.ExitCode.html  enum.HealthSeverity.html  enum.IssueKind.html  enum.PathVariable.html  enum.PlatformMode.html  enum.PresetKind.html  enum.ShellKind.html  index.html  sidebar-items.js  struct.ApplyOutcome.html  struct.ApplyPlan.html  struct.Diagnostic.html  struct.DoctorReport.html  struct.HealthReport.html  struct.PathEntry.html  struct.PathMutation.html  struct.PlatformRules.html  struct.RelatedExecutableHint.html  struct.ResolutionCandidate.html  struct.ResolutionReport.html  struct.ShellProfile.html  struct.ShellProfileScanReport.html  struct.WhyNotReport.html
patholog/model/apply/: enum.ApplyAction.html  struct.ApplyOutcome.html  struct.ApplyPlan.html
patholog/model/diagnostic/: enum.IssueKind.html  struct.Diagnostic.html
patholog/model/doctor/: struct.DoctorReport.html
patholog/model/exit_code/: enum.ExitCode.html
patholog/model/health/: enum.HealthSeverity.html  struct.HealthReport.html
patholog/model/path/: struct.PathEntry.html
patholog/model/path_variable/: enum.PathVariable.html
patholog/model/platform/: enum.PlatformMode.html  struct.PlatformRules.html
patholog/model/preset/: enum.PresetKind.html
patholog/model/resolution/: struct.RelatedExecutableHint.html  struct.ResolutionCandidate.html  struct.ResolutionReport.html
patholog/model/scan/: struct.PathMutation.html  struct.ShellProfile.html  struct.ShellProfileScanReport.html
patholog/model/shell/: enum.ShellKind.html
scripts/: fuzz_soak.sh  installer_smoke.sh
search.index/: 019ec4b5d0.js  059bee88e0.js  0905c8c66d.js  0cf8eefc90.js  0dd26d7a26.js  1aee877cbf.js  1cf4328ed5.js  1eae6ea398.js  2b57cdda57.js  3175a051a7.js  39bf14211c.js  3c41e297fe.js  3c44c5732f.js  4004f9b5ce.js  41d2074b40.js  46e0d775c1.js  4845bb9002.js  534f60ad0b.js  5f887f35cf.js  632151b54e.js  6e6ac427f3.js  6ef4c4728e.js  77f96861a4.js  7b8f469a2d.js  root.js
search.index/crateNames/: 1abc42721f.js
search.index/desc/: dccdbd0ef7.js
search.index/entry/: 6bf889cf2b.js
search.index/function/: 2a4ed351e4.js
search.index/generic_inverted_index/: 98d10cfc7d.js
search.index/name/: 5911ee36b3.js
search.index/normalizedName/: 2b2168cd85.js
search.index/path/: f8f1f702f7.js
search.index/type/: 16301a48be.js
src/: apply.rs  clean.rs  cli.rs  config.rs  doctor.rs  health.rs  lib.rs  main.rs  model.rs  normalize.rs  path_env.rs  platform.rs  policy.rs  profile_scan.rs  resolve.rs  why_not.rs
src/apply/: tests.rs
src/clean/: tests.rs
src/cli/: execute.rs  fail_on.rs  parse.rs  tests.rs  types.rs
src/config/: tests.rs
src/doctor/: duplicates.rs  ordering.rs  shadowed.rs  state.rs  tests.rs  unwanted.rs
src/fuzzing/: tests.rs
src/health/: tests.rs
src/model/: apply.rs  diagnostic.rs  doctor.rs  exit_code.rs  health.rs  path.rs  path_variable.rs  platform.rs  preset.rs  resolution.rs  scan.rs  shell.rs  tests.rs  why_not.rs
src/normalize/: dedupe.rs  key.rs  tests.rs
src/output/: human.rs  json.rs  mod.rs  tests.rs
src/path_env/: tests.rs
src/patholog/: apply.rs.html  clean.rs.html  cli.rs.html  config.rs.html  doctor.rs.html  health.rs.html  lib.rs.html  model.rs.html  normalize.rs.html  path_env.rs.html  platform.rs.html  policy.rs.html  profile_scan.rs.html  resolve.rs.html  why_not.rs.html
src/platform/: tests.rs
src/policy/: tests.rs
src/profile_scan/: tests.rs
src/resolve/: candidates.rs  filesystem.rs  hints.rs  names.rs  tests.rs
src/why_not/: tests.rs
tests/: binary_cli.rs  parity.rs
tests/parity/: clean.rs  exit_codes.rs  human.rs  json.rs  support.rs
(+77 files in other folders)
