[package]
authors = ["Klemen Tusar <techouse@gmail.com>"]
name = "patholog"
version = "0.6.0"
edition = "2024"
rust-version = "1.88"
license = "BSD-3-Clause"
description = "Diagnose, explain, clean, and safely repair PATH behavior."
readme = "README.md"
documentation = "https://docs.rs/patholog"
keywords = ["cli", "file-system", "path", "utilities"]
exclude = [
    ".codacy.yml",
    ".github/",
    ".gitattributes",
    ".gitignore",
    ".history/",
    ".vscode/**",
    "AGENTS.md",
    "about.hbs",
    "about.toml",
    "CODE-OF-CONDUCT.md",
    "docs/",
    "fuzz/**",
    "Makefile",
    "RELEASING.md",
    "SPEC.md",
    "scripts/**",
    "src/**/tests.rs",
    "src/**/tests/**",
    "SECURITY.md",
    "tests/**",
    "THIRD-PARTY-LICENSES.md",
]

[features]
default = []
fuzzing = []

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
