[package]
authors = ["Klemen Tusar <techouse@gmail.com>"]
name = "patholog"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
license = "BSD-3-Clause"
description = "Diagnose, explain, clean, and safely repair PATH behavior."
readme = "README.md"
documentation = "https://docs.rs/patholog"
repository = "https://github.com/techouse/patholog"
homepage = "https://techouse.github.io/patholog/"
keywords = ["cli", "file-system", "path", "utilities"]
exclude = [
    ".codacy.yml",
    ".github/",
    ".gitattributes",
    ".gitignore",
    ".history/",
    ".vscode/**",
    "AGENTS.md",
    "about.hbs",
    "about.toml",
    "CODE-OF-CONDUCT.md",
    "docs/",
    "fuzz/**",
    "Makefile",
    "RELEASING.md",
    "SPEC.md",
    "scripts/**",
    "src/**/tests.rs",
    "src/**/tests/**",
    "SECURITY.md",
    "tests/**",
    "THIRD-PARTY-LICENSES.md",
]

[features]
default = []
fuzzing = []

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "1"

[dev-dependencies]
assert_cmd = "2"

[package.metadata.deb]
maintainer = "Klemen Tusar <techouse@gmail.com>"
copyright = "2026, Klemen Tusar <techouse@gmail.com>"
depends = "$auto"
extended-description = """
patholog diagnoses, explains, cleans, and safely repairs PATH behavior across
macOS, Linux, and Windows. It focuses on read-first diagnostics and tightly
scoped shell profile repairs through a managed block.
"""
section = "utils"
priority = "optional"
assets = [
    ["target/release/patholog", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/patholog/README.md", "644"],
    ["LICENSE", "usr/share/doc/patholog/LICENSE", "644"],
    [
        "THIRD-PARTY-LICENSES.md",
        "usr/share/doc/patholog/THIRD-PARTY-LICENSES.md",
        "644",
    ],
    [
        "target/completions/patholog.bash",
        "usr/share/bash-completion/completions/patholog",
        "644",
    ],
    [
        "target/completions/_patholog",
        "usr/share/zsh/vendor-completions/_patholog",
        "644",
    ],
    [
        "target/completions/patholog.fish",
        "usr/share/fish/vendor_completions.d/patholog.fish",
        "644",
    ],
]

[package.metadata.generate-rpm]
release = "1"

[[package.metadata.generate-rpm.assets]]
source = "target/release/patholog"
dest = "/usr/bin/patholog"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/patholog/README.md"
mode = "0644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest = "/usr/share/doc/patholog/LICENSE"
mode = "0644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "THIRD-PARTY-LICENSES.md"
dest = "/usr/share/doc/patholog/THIRD-PARTY-LICENSES.md"
mode = "0644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "target/completions/patholog.bash"
dest = "/usr/share/bash-completion/completions/patholog"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "target/completions/_patholog"
dest = "/usr/share/zsh/vendor-completions/_patholog"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "target/completions/patholog.fish"
dest = "/usr/share/fish/vendor_completions.d/patholog.fish"
mode = "0644"

[profile.release]
strip = "symbols"
