[package]
name = "patholog-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
patholog = { path = "..", features = ["fuzzing"] }
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["."]

[[bin]]
name = "path_clean"
path = "fuzz_targets/path_clean.rs"
test = false
doc = false
bench = false

[[bin]]
name = "path_parse_doctor"
path = "fuzz_targets/path_parse_doctor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cli_read_only"
path = "fuzz_targets/cli_read_only.rs"
test = false
doc = false
bench = false
